--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app, AdrienneAEW Project Page App, Sass"
     />
     <meta name="Author" content="AEW" />
-  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/icon&#63;family&#61;Material&#43;Icons|Material&#43;Icons" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
